@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.6'
     id 'io.freefair.lombok' version '8.10'
     id 'java'
+    id 'jacoco'
 }
 
 group = 'org.example'
@@ -12,12 +13,46 @@ repositories {
     mavenCentral()
 }
 
+jacocoTestReport {
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it,
+                    exclude: [
+                            'org/example/exception/**',
+                            'org/example/config/**',
+                            'org/example/entity/**',
+                            'org/example/service/payload/**',
+                            "**/Application**"
+                    ]
+            )
+        }))
+    }
+}
+
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.postgresql:postgresql:42.7.4'
+
+    implementation 'org.telegram:telegrambots-springboot-longpolling-starter:7.10.0'
+    implementation 'org.telegram:telegrambots-client:7.10.0'
+    implementation 'org.apache.commons:commons-lang3:3.17.0'
+    implementation 'org.jspecify:jspecify:1.0.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
+}
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
 }
